--- a/index.html
+++ b/index.html
@@ -62,17 +62,14 @@
           <img src="img/logo.png" alt="" />
         </a>
         <button
-          class="navbar-toggler"
           type="button"
+          class="navbar-toggler"
           data-toggle="collapse"
-          data-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
+          data-target="#navbarCollapse"
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav">
             <li class="nav-item active">
               <a class="nav-link" href="index.html">Home </a>
@@ -216,13 +213,13 @@
     <div class="videosection">
       <div class="cosmopolitan">
         <img src="img/juicephoto.jpg" />
-        <button
+        <!-- <button
           type="button"
           class="btn-play"
           data-toggle="modal"
           data-src="https://youtu.be/UbCSAm303RA"
           data-target="#videoModal"
-        ></button>
+        ></button> -->
       </div>
       <div class="pricetag">
         <div class="circle">
@@ -240,7 +237,7 @@
       </div>
     </div>
 
-    <div
+    <!-- <div
       class="modal-fade"
       id="videoModal"
       tabindex="-1"
@@ -271,7 +268,8 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
+
     <div class="productlist">
       <div class="container">
         <div class="productwrapper">
