--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
+        <div></div>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav">
             <li class="nav-item active">
